# advent2023

./: Cargo.toml
docs/: 1.md  2.md  3.md  4.md  5.md
src/: bin.rs  day_10_pipe_maze.rs  day_11_cosmic_expansion.rs  day_12_hot_springs.rs  day_1_trebuchet.rs  day_2_cube_conundrum.rs  day_3_gear_ratios.rs  day_4_scratchcards.rs  day_5_if_you_give_a_seed_a_fertilizer.rs  day_6_wait_for_it.rs  day_7_camel_cards.rs  day_8_haunted_wasteland.rs  day_9_mirage_maintenance.rs  lib.rs
