[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "solutions"
path = "src/lib.rs"

[[bin]]
name = "advent23"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.10", features = [] }
num-traits = "0.2.17"
